[workspace]
members = [
    "crates/peernet-core",
    "crates/peernet-network",
    "crates/peernet"
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = { version = "2.0.18" }
derive_more = { version = "2.1.1", features = ["display", "from", "as_ref", "deref"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
libp2p = { version = "0.56.0", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "macros",
    "identify",
    "ed25519"
] }
futures = { version = "0.3.32" }
clap = { version = "4.5.59", features = ["derive"] }
peernet-core = { path = "crates/peernet-core" }
peernet-network = { path = "crates/peernet-network" }
